[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/Quadro.jpeg" type="Texture" id=2]
[ext_resource path="res://puzzle_cadeirante.gd" type="Script" id=3]

[node name="puzzle_cadeirante" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="puzzle_cadeir" type="NinePatchRect" parent="."]
visible = false
margin_left = 66.0
margin_top = 19.0
margin_right = 559.0
margin_bottom = 292.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )

[node name="certo" type="Label" parent="puzzle_cadeir"]
margin_left = 202.0
margin_top = 30.0
margin_right = 242.0
margin_bottom = 44.0
text = "certo!!!"

[node name="errado" type="Label" parent="puzzle_cadeir"]
margin_left = 202.0
margin_top = 30.0
margin_right = 243.0
margin_bottom = 61.0
text = "errado
"

[node name="LineEdit" type="LineEdit" parent="puzzle_cadeir"]
margin_left = 128.0
margin_top = 301.0
margin_right = 355.0
margin_bottom = 325.0

[node name="Label" type="Label" parent="puzzle_cadeir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -35.5
margin_right = 20.5
margin_bottom = -21.5
text = "A + B = 15"

[node name="Label2" type="Label" parent="puzzle_cadeir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -13.5
margin_right = 3.5
margin_bottom = 0.5
text = "A + A + B = 20"

[node name="Label3" type="Label" parent="puzzle_cadeir"]
margin_left = 186.0
margin_top = 146.0
margin_right = 271.0
margin_bottom = 160.0
text = "A + C + C =  45"

[node name="Label4" type="Label" parent="puzzle_cadeir"]
margin_left = 186.0
margin_top = 168.0
margin_right = 277.0
margin_bottom = 182.0
text = "C + C + C = ?"

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
